--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,6 +5,10 @@
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
+.cursor-p{
+    cursor: pointer;
+}
+
 body {
     background-color: #0C1219;
     margin: 0;
