--- a/public/css/index.css
+++ b/public/css/index.css
@@ -23,6 +23,36 @@ a {
 }
 
 /* banner CSS */
+
+#banner .swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+#banner .swiper-slide {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
+
+#banner .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 48vw;
+    object-fit:cover;
+  }
+#banner .swiper-slide iframe {
+    display: block;
+    width: 100%;
+    height: 48vw;
+    object-fit: cover;
+  }
 #banner .container {
     position: relative;
     width: 100%;
