--- a/public/css/index.css
+++ b/public/css/index.css
@@ -296,6 +296,7 @@ h2 {
     flex-direction: row;
     margin-bottom: 60px;
     margin-right: 50px;
+    line-height: 26px;
 }
 
 #about .about-card-group-text-animation-bottom {
@@ -303,6 +304,7 @@ h2 {
     flex-direction: row;
     margin-bottom: 60px;
     margin-right: 50px;
+    line-height: 26px;
 }
 
 #about.about-card-group-img {
