--- a/public/css/franchisee-form.css
+++ b/public/css/franchisee-form.css
@@ -15,6 +15,7 @@ a {
 }
 #franchisee-form span{
     color: red;
+    font-size: 25px;
 }
 #franchisee-form {
     /* height: calc(100vh - 109px); */
