英文版 placeholder required 完成

--- a/public/css/franchisee-form_en.css
+++ b/public/css/franchisee-form_en.css
@@ -13,7 +13,10 @@ body{
 a {
     text-decoration: none;
 }
-
+#franchisee-form span{
+    color: red;
+    font-size: 25px;
+}
 #franchisee-form {
     /* height: calc(100vh - 109px); */
     width: 100%;
