--- a/public/css/franchisee-form_en.css
+++ b/public/css/franchisee-form_en.css
@@ -26,6 +26,11 @@ a {
     padding: 50px 0;
 }
 
+#franchisee-form .alert {
+    margin: auto;
+    color: red;
+}
+
 #franchisee-form .form-container {
     width: 100%;
     height: 100%;
