distribution-confirm title選取有checked的效果了

--- a/public/css/distribution-confirm.css
+++ b/public/css/distribution-confirm.css
@@ -823,3 +823,8 @@ ul li {
     background: aliceblue;
     color: #000000;
 }
+
+#distribution-confirm .title-checked{
+    background-color: white;
+    color: black;
+}
