--- a/public/css/distribution.css
+++ b/public/css/distribution.css
@@ -312,6 +312,7 @@ a {
     position: absolute;
     top: 0%;
     left: 85%;
+    /* z-index: 100; */
 }
 
 #distribution .product-background-hover {
