css樣式修改 nav高度調整 語言切換新增hover變化

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -307,6 +307,11 @@ header .dropdown-content-en {
     text-align: center;
     text-decoration: none;
     position: absolute;
+
+}
+header .dropdown-content-ch:hover,
+header .dropdown-content-en:hover {
+    background-color: #ffe282;
 }
 
 header .dropdown-content-en {
